feat: add modificar usuario

--- a/frontend/templates/adm_alumnos.html
+++ b/frontend/templates/adm_alumnos.html
@@ -58,11 +58,11 @@
         </div>
         <div class="card">
             <h2>Modificar Alumno</h2>
-            <a href="#">Seleccionar</a>
+            <a href="solicitar_alumno_id">Seleccionar</a>
         </div>
         <div class="card">
             <h2>Eliminar Alumno</h2>
-            <a href="#">Seleccionar</a>
+            <a href="eliminar_alumno">Seleccionar</a>
         </div>
     </div>
 </body>
