--- a/frontend/templates/success.html
+++ b/frontend/templates/success.html
@@ -43,7 +43,7 @@
     <div class="success-container">
         <h2>Éxito</h2>
         <p>Los cambios se realizaron de forma exitosa.</p>
-        <button onclick="window.location.href='home'">Aceptar</button>
+        <button onclick="window.location.href='/home'">Aceptar</button>
     </div>
 </body>
 </html>
