--- a/frontend/templates/home_adm.html
+++ b/frontend/templates/home_adm.html
@@ -54,7 +54,7 @@
     <div class="container">
         <div class="card">
             <h2>Administrar Asignaturas</h2>
-            <a href="#">Seleccionar</a>
+            <a href="administrar_asignaturas">Seleccionar</a>
         </div>
         <div class="card">
             <h2>Administrar Alumnos</h2>
