--- a/frontend/templates/login.html
+++ b/frontend/templates/login.html
@@ -50,7 +50,8 @@
 <body>
     <div class="login-container">
         <h2>Inicio de Sesión</h2>
-        <form action="/login" method="post">
+        <form action="/login/" method="post">
+            {% csrf_token %}
             <input type="text" name="username" placeholder="Nombre de usuario" required>
             <input type="password" name="password" placeholder="Contraseña" required>
             <button type="submit">Iniciar Sesión</button>
